# layer-laboratory

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
include/mitsuba/core/: platform.h
include/mitsuba/layer/: fourier.h  (+6 more)
resources/: mitsuba.conf.template
results/Figure_2_AnisotropicFrequencies/: generate.py
results/Figure_3_IncreasingMSParameter/: coffee_box_0.05_0.40_03.xml  coffee_box_0.05_0.40_09.xml  coffee_box_0.05_0.40_27.xml  coffee_box_0.10_0.20_01.xml  coffee_box_0.10_0.20_03.xml  coffee_box_0.10_0.20_09.xml  precompute.py
results/Figure_4_InverseTransmission/: generate.py
results/Figure_5_FresnelRegularization/: generate.py
results/Figure_6_AnisotropicSpheres/: materials.py  precompute.py  sphere_hor_hor.xml  sphere_hor_iso.xml  sphere_hor_ver.xml  sphere_iso_hor.xml  sphere_iso_iso.xml  sphere_iso_ver.xml  sphere_ver_hor.xml  sphere_ver_iso.xml  sphere_ver_ver.xml
results/Figure_7_LayeredExamples/: aniso_gold.xml  aniso_gold_aniso_dielectric.xml  aniso_gold_blue_dielectric.xml  aniso_gold_dust.xml  iso_gold_iso_dielectric.xml  precompute.py
results/Figure_9_11_12_Validation/: Visualize measurements.ipynb  analytic_addition.py  analytic_subtraction.py  anisotropic_addition_mc_reference.xml  dragon.xml  error_images.py  error_plots.py  measured_addition.py  measured_subtraction.py  measurements_to_scattering_matrices.py  render.py
src/: CMakeLists.txt
src/bsdfs/: CMakeLists.txt  bumpmap.cpp  fourier.cpp  tangentrotation.cpp
src/cmake/: docstrings.cmake
src/integrators/: CMakeLists.txt  bruteforce_layers.cpp  path.cpp
src/liblayer/: CMakeLists.txt  fourier.cpp  layer.cpp  microfacet.cpp  phase.cpp  sparse.cpp  storage.cpp
src/liblayer/cmake/: FindFFTW.cmake  FindUmfpack.cmake
src/liblayer/python/: CMakeLists.txt  fourier.cpp  layer.cpp  main.cpp  main_v.cpp  microfacet.cpp  phase.cpp  sparse.cpp  storage.cpp
src/liblayer/tests/: test_bsdfs.py  test_layering.py  test_volumes.py
src/librender/: CMakeLists.txt  texture.cpp
src/python/: __init__.py
src/textures/: bitmap.cpp
(+7 files in other folders)
